--- a/reports/resources/time-report.html
+++ b/reports/resources/time-report.html
@@ -10,7 +10,7 @@
 <div class="mulesoft-topbar">
     <div class="mulesoft-appbar">
         <div class="muleicon muleicon-logo"></div>
-        <div class="anypoint-brand">MUnit Coverage Report - processes/poller.xml</div>
+        <div class="anypoint-brand">MUnit Coverage Report - resources/time.xml</div>
     </div>
 </div>
 
@@ -21,11 +21,11 @@
 </div>
 
 <div class="col-md-8">
-    <h2 class="text-bold">Resource Coverage - #Processors 0 / 2</h2>
+    <h2 class="text-bold">Resource Coverage - #Processors 2 / 2</h2>
     <div class="progress">
-        <span>0%</span>
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0"
-             aria-valuemax="100" style="width: 0%;">
+        <span>100%</span>
+        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+             aria-valuemax="100" style="width: 100%;">
         </div>
     </div>
     <ul class="list-unstyled">
@@ -49,15 +49,15 @@
         </thead>
         <tbody id="table-body">
         <tr>
-            <td colspan="2">poller-flow</td>
+            <td colspan="2">timeFlow</td>
             <td>Flow</td>
-            <td>0</td>
+            <td>2</td>
             <td>2</td>
             <td>
                 <div class="progress">
-                    <span>0%</span>
-                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0"
-                         aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                    <span>100%</span>
+                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100"
+                         aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
                     </div>
                 </div>
             </td>
