--- a/reports/summary.html
+++ b/reports/summary.html
@@ -16,9 +16,9 @@
 <div class="col-md-8 col-md-offset-2">
     <h2 class="text-bold">Application Coverage*</h2>
     <div class="progress">
-        <span>21.43%</span>
-        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="21.429" aria-valuemin="0"
-             aria-valuemax="100" style="width: 21.429%;">
+        <span>38.46%</span>
+        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="38.462" aria-valuemin="0"
+             aria-valuemax="100" style="width: 38.462%;">
         </div>
     </div>
     <ul class="list-unstyled">
@@ -42,25 +42,25 @@
         <tr>
             <td colspan="2"><a href=simple-app-report.html>simple-app.xml</a></td>
             <td>3</td>
-            <td>85.71</td>
+            <td>84.62</td>
             <td>
                     <div class="progress">
-                        <span>25%</span>
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="25"
-                             aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
+                        <span>27.27%</span>
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="27.273"
+                             aria-valuemin="0" aria-valuemax="100" style="width: 27.273%;">
                         </div>
                     </div>
             </td>
         </tr>
         <tr>
-            <td colspan="2"><a href=processes/poller-report.html>processes/poller.xml</a></td>
+            <td colspan="2"><a href=resources/time-report.html>resources/time.xml</a></td>
             <td>1</td>
-            <td>14.29</td>
+            <td>15.38</td>
             <td>
                     <div class="progress">
-                        <span>0%</span>
-                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0"
-                             aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                        <span>100%</span>
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100"
+                             aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
                         </div>
                     </div>
             </td>
